--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".endwith'.com' # False"
+    "\"art.vandelay@vandelay.co\".endwith('.com' # False"
    ]
   },
   {
