--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endwith('.com') # False"
+    "\"art.vandelay@vandelay.co\".with('.com') # False"
    ]
   },
   {
