--- a/index.ipynb
+++ b/index.ipynb
@@ -254,14 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'vandelay.comwww.vandelay.com'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'vandelay.com' \"www.\" +\"va\"# 'www.vandelay.com'"
+    "'vandelay.com' \"www.\" +\"vandelay.com\"# 'www.vandelay.com'"
    ]
   },
   {
