--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
     }
    ],
    "source": [
-    "www'vandelay.com' # 'www.vandelay.com'"
+    "www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
