--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -262,16 +262,16 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.comwww.vandelay.com'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "www.'+'vandelay.com' # 'www.vandelay.com'"
+    "'www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
