--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    ".com \"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
