Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     }
    ],
    "source": [
-    ".com in(\"art.vandelay@vandelay.co\") # False"
+    "''.com' in(\"art.vandelay@vandelay.co\") # False"
    ]
   },
   {
